<resources>
    <string name="app_name">Aquisito</string>
    <string name="location_title">Ubicación</string>
    <string name="route_title">Generar ruta</string>
    <string name="config_title">Configuración</string>
    <string name="content_description_location">pestaña de ubicacion actual</string>
    <string name="content_description_route">pestaña para Crear rutas</string>
    <string name="content_description_config">pestaña de ajustes</string>
    <string name="texto_estas_en">Estás en:\n%s</string>
    <string name="location_message_with_poi">Estás en:\n%s\nEn un radio de 10 metros, puedes encontrar: %s</string>
    <string name="message_GPS_deshabilitado">GPS deshabilitado. Actívelo para usar esta función.</string>
    <string name="message_GPS_habilitado">GPS habilitado. Obteniendo ubicación...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>