<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_location"
        android:title="@string/location_title"
        android:icon="@drawable/ic_person_location"
        app:showAsAction="never"
        android:contentDescription="@string/content_description_location" />

    <item
        android:id="@+id/action_route"
        android:title="@string/route_title"
        android:icon="@drawable/ic_route"
        app:showAsAction="always"
        android:contentDescription="@string/content_description_route"/>

    <item
        android:id="@+id/action_config"
        android:title="@string/config_title"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"
        android:contentDescription="@string/content_description_config"/>

</menu>